--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -224,6 +224,7 @@ a.glyphicon-home-icon { color: black; margin-right: .25em; text-decoration:none;
 .action-button-box { margin-top: 1em; }
 .action-button { background: white; }
 .authoring-tool-box { font-size: 90%; }
+.action-button-app-title {text-align: center; font-size: 0.8em; width:200px; font-weight: bold; margin-bottom: 8px;}
 
 .project-row-style { margin-bottom:1em; }
 .action-row { margin-bottom: 1em; }
