Improve styling of app store items.
Give each app store listing a clean, gray box
Clean up "Add" and "Info" buttons.

Display "Unknown" when app vendor is set to "None"
instead of "none".

Clean up format style sheets in project.html, app-store.html,
app-store-item.html templates. Properly indent local
project.html template style sheets to collapse in IDEs.

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -197,7 +197,7 @@ a.glyphicon-home-icon { color: black; margin-right: .25em; text-decoration:none;
 
 .app-category { }/* TBD */
 .app-bottom-margin { margin-bottom: 30px; }
-.app-quick-start-form { margin-top: .5em; }
+.app-quick-start-form { margin-top: .5em;}
 
 .control-label { font-size:.8em;} /* within modal, the word description was breaking */
 
@@ -224,7 +224,7 @@ a.glyphicon-home-icon { color: black; margin-right: .25em; text-decoration:none;
 .action-button-box { margin-top: 1em; }
 .action-button { background: white; }
 .authoring-tool-box { font-size: 90%; }
-.action-button-app-title {text-align: center; font-size: 0.8em; width:200px; font-weight: bold; margin-bottom: 8px;}
+.action-button-app-title {text-align: center; font-size: 0.8em; max-width:200px; font-weight: bold; margin-bottom: 8px;}
 
 .project-row-style { margin-bottom:1em; }
 .action-row { margin-bottom: 1em; }
