--- a/templates/app-store-item.html
+++ b/templates/app-store-item.html
@@ -7,10 +7,7 @@
 {% block head %}
 <style>
 
-  body {
-
-    background-color: rgb(247,247,247);
-  }
+  body { background-color: rgb(247,247,247); }
 
   #app-metadata {
     padding: 1em;
@@ -20,43 +17,34 @@
     font-size: 0.9em;
     text-align: left;
   }
+  #app-metadata a { color: black; text-decoration: underline; }
 
-  #app-metadata a {
-    color: black;
-    text-decoration: underline;
-  }
+  .meta-key { color: #888; }
+  .meta-heading { margin-top: 20px; margin-bottom: 6px; }
 
-  .meta-key {
-    color: #888;
-  }
-
-  .meta-heading {
-    margin-top: 20px;
-    /*color: #888;*/
-    /*border-bottom: 0.5px solid #888;*/
-    margin-bottom: 6px;
-  }
-
-  .app-icon {
-    width: 80%;
-    max-width: 128px;
-  }
+  .app-icon { width: 80%; max-width: 128px; }
 
   @media screen and (max-width: 768px) {
-    .app .app-icon {
-      width: 80%;
-    }
+    .app .app-icon { width: 80%; }
   }
 
  .app {
     width: 968px;
     margin: auto;
     margin-top: 40px;
-    border-radius: 10px;
-    /*border: 1px solid rgb(204, 204, 204);*/
-    border-bottom: 1px solid rgb(204, 204, 204);
+    border: 3px solid #D9D9D9;
     padding: 12px;
-    background-color: white;
+    background-color: #F2F2F2;
+    margin-bottom: 24px;
+    cursor: default;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+   .app {
+    border: 3px solid #D9D9D9;
+    padding: 12px;
+    background-color: #F2F2F2;
     margin-bottom: 24px;
     cursor: default;
     overflow: hidden;
@@ -71,22 +59,12 @@
   }
 
   @media screen and (max-width: 1200px) {
-    .app h3 {
-      font-size: 17px;
-    }
+    .app h3 { font-size: 17px; }
   }
 
-
-  .app .body {
-  }
-
-  .app .body p {
-  }
-
-  .app .body p:last-child {
-    margin: 0;
-  }
-
+  .app .body {  }
+  .app .body p {  }
+  .app .body p:last-child { margin: 0; }
 </style>
 {% endblock %}
 
@@ -184,7 +162,7 @@
                     {% if app.vendor_url is not None %}
                         <a href="{{ app.vendor_url }}">{{ app.vendor }}</a>
                     {% else %}
-                        &mdash;
+                        {{ app.vendor }}
                     {% endif %}
                 </div>
             </div>
