--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -92,8 +92,8 @@
       </form>
     </div>
 
-    <p id="discussion-you-are-alone" style="display: none" class="text-danger">
-      You are the only person in this conversation so far. <a href="#" onclick="return invite_user_to_discussion()" class="btn btn-link btn-default">Invite a colleague</a> to join you.
+    <p id="discussion-you-are-alone" style="display: none" class="">
+      You are the only person in this conversation so far. <a href="#" onclick="return invite_user_to_discussion()" class="">Invite a colleague</a> to join you.
     </p>
 
     {% if show_discussion_members_count %}
