--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -135,8 +135,6 @@ div.question-answer[data-reviewed] a { text-decoration: underline; }
 
 .task-question-debug-links { color: #999; font-size: 80%; margin-top: 20px; }
 
-
-
 .question-source-invitation { margin-bottom: 2em; }
 .question-source-invitation-show { text-align: right; margin-bottom: -1.5em; }
 .question-source-invitation-link { color: #448; font-size: 85%; }
@@ -160,11 +158,10 @@ div.question-answer[data-reviewed] a { text-decoration: underline; }
 .question-can-review { margin-top: -10px; }
 .question-select-review { display: block; margin: 1em 0; font-size: 80%; background-color: white; padding: .2em .2em .15em .2em; }
 .question-review-status { margin-top: 1em; font-size: 85%; color: #666; }
-.question-progress-project { background-color:rgba(255,255,255,1); border-radius: 6px; }
+.question-progress-project { background-color: rgba(247,247,247,1); border-radius: 3px; border: 1px solid rgb(204, 204, 204); }
 .question-form-group { width: auto; border:  none; padding: 0; display: inline-block; }
 .question-input-font { font-size: 14px; }
 .question-glyphicon-comment { color: #56A; }
-
 
 /* within navbar and base.html */
 .navbar-brand img { margin: -2px 20px; width:110px; }
