Tweek styling of project page question page:
* Remove light gray background from project page,
  question page, task finished page.
* Reduce corner radius in focus area blocks.
* Widen question area.

--- a/templates/task-finished.html
+++ b/templates/task-finished.html
@@ -21,7 +21,19 @@
     font-weight: bold;
   }
 
-/* removed thead tr */
+  /* removed thead tr */
+
+  /* Legacy background and focus area styling for question pages */
+  body { /*background-color: rgb(247,247,247);*/ }
+  #focus-area-wrapper {
+    border-radius: 3px;
+    border: 0px solid rgb(204, 204, 204);
+    padding: 2em 2em 3em 2em;
+    background-color: white;
+    /*background-color: rgba(253,253,253,1);*/
+    /* on mobile, space between columns */
+    margin-bottom: 30px;
+  }
 
 </style>
 {% endblock %}
