Component library improvements
Set statements to delete (CASCADE) when producer_element deleted.
Set statements to delete (CASCADE) when consumer_element deleted.

Display components alphabetically in component library
text listing and in selected components text listing.

Include component description and statement count in
component library text listingvand in selected components
text listing.

Removed enable_experimental_oscal check; permamently
enable OSCAL feature.

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -122,6 +122,8 @@ div.question-answer[data-reviewed] a { text-decoration: underline; }
   text-overflow: ellipsis;
 }
 
+.not-provided {color: #888; font-style: italic;}
+
 /* New CSS based on removing inline CSS */
 .btn-sm { width:95%; max-width:200px;  } /* this makes the action buttons all the same width.
 
