--- a/templates/components/component_library.html
+++ b/templates/components/component_library.html
@@ -47,8 +47,8 @@
       <div id="" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
         {% if component.description %}{{ component.description }}{% else %}<span class="not-provided">No description provided.</span>{% endif %}
       </div>
-      <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-        {% if component.get_control_impl_smts_prototype_count > 0 %}{{ component.get_control_impl_smts_prototype_count }} statement{{ component.get_control_impl_smts_prototype_count|pluralize }}{% else %}<span class="not-provided">No statements</span>{% endif %}
+      <div id="" class="pull-right col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+        <span class="pull-right">{% if component.get_control_impl_smts_prototype_count > 0 %}{{ component.get_control_impl_smts_prototype_count }} control{{ component.get_control_impl_smts_prototype_count|pluralize }}</span>{% else %}<span class="not-provided">No statements</span>{% endif %}
       </div>
     </div>
   {% endfor %}
