--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -44,7 +44,7 @@
                         {% if component.description %}{{ component.description }}{% else %}<span class="not-provided">No description provided.</span>{% endif %}
                     </div>
                     <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                        {% if component.get_control_impl_smts_prototype_count > 0 %}{{ component.get_control_impl_smts_prototype_count }} statement{{ component.get_control_impl_smts_prototype_count|pluralize }}{% else %}None{% endif %}
+                        <span class="pull-right">{% if component.get_control_impl_smts_prototype_count > 0 %}{{ component.get_control_impl_smts_prototype_count }} control{{ component.get_control_impl_smts_prototype_count|pluralize }}</span>{% else %}None{% endif %}
                     </div>
                 </div>
             {% endfor %}
