--- a/templates/systems/deployments_list.html
+++ b/templates/systems/deployments_list.html
@@ -58,7 +58,7 @@
                 {{ deployment.description }}
             </div>
             <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                <a class="portfolio-project-link" href="/systems/{{ system.id }}/deployment/{{ deployment.id }}/sar" title="Edit deployment" aria-label="Edit deployment" >assessments</a>
+              &nbsp;
             </div>
             <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                 {{ deployment.updated|timesince}} ago
