replaced function based view components_selected with class based listview SelectedComponentsList. The latter also has pagination and is ordered by name

--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -35,19 +35,23 @@
             <div id="tab-content" class="row rows-header">
                 <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><span class="systems-selected-components">Selected Components</span></div>
             </div>
-            {% for component in system.producer_elements %}
-                <div id="tab-content" class="row row-control">
-                    <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                        <a href={% url 'system_element' system_id=system.id element_id=component.id %}>{{ component.name }}</a>
+                {#        PAGINATION START #}
+            {% for component in elements %}
+                {# Each "component" is a Element model object. #}
+                    <div id="tab-content" class="row row-control">
+                        <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                            <a href={% url 'system_element' system_id=system.id element_id=component.id %}>{{ component.name }}</a>
+                        </div>
+                        <div id="" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                            {% if component.description %}{{ component.description }}{% else %}<span class="not-provided">No description provided.</span>{% endif %}
+                        </div>
+                        <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+                            <span class="pull-right">{% if component.get_control_impl_smts_prototype_count > 0 %}{{ component.get_control_impl_smts_prototype_count }} control{{ component.get_control_impl_smts_prototype_count|pluralize }}</span>{% else %}None{% endif %}
+                        </div>
                     </div>
-                    <div id="" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                        {% if component.description %}{{ component.description }}{% else %}<span class="not-provided">No description provided.</span>{% endif %}
-                    </div>
-                    <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                        <span class="pull-right">{% if component.get_control_impl_smts_prototype_count > 0 %}{{ component.get_control_impl_smts_prototype_count }} control{{ component.get_control_impl_smts_prototype_count|pluralize }}</span>{% else %}None{% endif %}
-                    </div>
-                </div>
             {% endfor %}
+
+{#        PAGINATION END #}
 
             <div id="tab-content" class="row row-control" style="">
                 <form id="add_component" class="form-inline" method="post" action="/systems/{{ system.id }}/components/add_system_component">
@@ -68,8 +72,23 @@
                     </div>
 
                 </form>
-            </div>
 
+            <div class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </div>
+            </div>
         </div>
     </div>
 
