--- a/templates/projects.html
+++ b/templates/projects.html
@@ -72,7 +72,7 @@ Your Compliance Projects
     font-size: 16px;
     font-family: Hind, sands-serif;
     line-height: 22px;
-    color: rgba(51, 51, 51);
+    color: rgba(51, 51, 51, .8);
     padding: 0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
   }
@@ -105,7 +105,7 @@ Your Compliance Projects
 <div class="container">
 
 <div class="project-main">
-  <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#"" class=" btn btn-success">Start a project</a>
+  <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#" class=" btn btn-success">Start a project</a>
 </div>
 
 {% if projects|length > 0 %}
@@ -175,7 +175,7 @@ Your Compliance Projects
           <div class="glyphicon glyphicon glyphicon-list-alt"></div>
         </div>
         <div class="col-md-9">
-          <h3><a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#"">Start a project</a></h3>
+          <h3><a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#">Start a project</a></h3>
           <p>Projects are your organization's questionnaires, assessments and guides needed for authorizations.
           </p>
         </div>
