Added ProjectList class based view with a pagniation of 10 for project listing. Wording and comments.

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -95,7 +95,7 @@ Your Compliance Projects
 </style>
 {% endblock %}
 
-<!-- Remove contextbar from top of page -->
+<!-- Remove context bar from top of page -->
 {% block contextbar %}{% endblock %}
 
 {% block body %}
@@ -165,6 +165,21 @@ Your Compliance Projects
 
 {% endfor %}
 
+<div class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </div>
 {% if projects|length < 1 %}
 <!-- Display grid of options -->
   <div class="row">
