--- a/templates/projects.html
+++ b/templates/projects.html
@@ -172,7 +172,7 @@ Your Compliance Projects
                 {% endif %}
 
                 <span class="current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
                 </span>
 
                 {% if page_obj.has_next %}
