--- a/templates/projects_lifecycle_original.html
+++ b/templates/projects_lifecycle_original.html
@@ -74,7 +74,7 @@ h1.mini {
   font-size: 16px;
   font-family: Hind, sands-serif;
   line-height: 22px;
-  color: rgba(51, 51, 51);
+  color: rgba(51, 51, 51, 1);
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
 }
@@ -128,7 +128,6 @@ h1.mini {
 </div>
 
 {% if lifecycles|length > 0 %}
-{{ lifecycles }}
 {% for lifecycle in lifecycles %}
   <div class="clearfix"></div>
   <div class="lifecycle">
