--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -83,10 +83,7 @@
           </li>
 
         {% elif LOGIN_ENABLED %}
-          <li><a><form name="form" method="post" action={% url 'homepage' %}>
-               {% csrf_token %}
-    <input type="submit" name="action" value="login"/>
-</form></a></li>
+          <li><a href="{% url 'homepage' %}">Login</a></li>
         {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
